\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.6.3}{
  \itemize{
    \item Fix small bug in residuals.survfit wrt labeling rows of the
  output
}}
\section{Changes in version 3.6-2}{
  \itemize{
    \item Change survfitaj.c to avert a spurious compiler warning which
    made the CRAN input unhappy
}}
\section{Changes in version 3.6-1}{
  \itemize{
    \item Major update to survfit routines. Infinitesimal jackknife (IJ)
    residuals are now primarily computed using the residuals() function
    post fit, de-emphasizing return of an influence component from the
    fit, with significant work to make the residuals function
    computationally  efficient. New tests for many edge cases.
    \item Addition of a "methods" vignette to more fully document
    formulas and code, begining a move away from noweb documentation.
    \item Add test case for the 'extended KM', one where subjects change
    arms in mid-stream.  (I'm not a fan, but some advocate it.)  This
    uncovered some inconsistencies in the n.risk and n.censor values;
    the survival estimates themselves were correct.  For a subject with data
    of (1, 5+), (5, 7), say, there is no "censor" at time 5; the prior code
    sometimes emited an unneeded output line for such rows.
    \item Add n.id to the survfit object= number of unique id values
    used in creating a curve; available when the survfit call contains
    an id argument.  This is used as "n" in the default printout.
    Useful when a subject spans multiple rows.
    \item Add a new option to survfit. If \code{entry=TRUE} the output
    will contain \code{n.enter} = the number of entries at this time;
    new rows are added for each unique entry time.  The default option
    of FALSE creates rows only at event/censor times; the historical behavior.
    \item Fix a bug in survfit.coxph. If the start.time option resulted
    in 0 subjects for a curve it didn't catch it properly.