@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2024-03-04 r86048) -- "Unsuffered Consequences"
+R Under development (unstable) (2024-04-01 r86255) -- "Unsuffered Consequences"
 Copyright (C) 2024 The R Foundation for Statistical Computing
-Platform: aarch64-unknown-linux-gnu
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -2487,30 +2487,31 @@ n= 64
 > 
 > fit <- survfit(Surv(time, status) ~ x, aml)
 > resid(fit, times=c(24, 48), type="RMTS")
-            [,1]         [,2]
- [1,] -1.0836777 -2.076652893
- [2,] -0.7200413 -1.713016529
- [3,]  0.2004132  0.421074380
- [4,] -0.3237345 -1.468414256
- [5,]  0.1876291 -0.957050620
- [6,]  0.2899019  0.965676653
- [7,]  0.2899019 -0.359777893
- [8,]  0.2899019  0.008403926
- [9,]  0.2899019  1.726585744
-[10,]  0.2899019  1.726585744
-[11,]  0.2899019  1.726585744
-[12,] -1.0057870 -1.475694444
-[13,] -1.0057870 -1.475694444
-[14,] -0.7557870 -1.225694444
-[15,] -0.7557870 -1.225694444
-[16,] -0.4224537 -0.892361111
-[17,]  0.5636574  0.899305556
-[18,]  0.4826389 -0.121527778
-[19,]  0.5798611  0.267361111
-[20,]  0.5798611  0.559027778
-[21,]  0.5798611  0.850694444
-[22,]  0.5798611  1.822916667
-[23,]  0.5798611  2.017361111
+    times
+             24           48
+  1  -1.0836777 -2.076652893
+  2  -0.7200413 -1.713016529
+  3   0.2004132  0.421074380
+  4  -0.3237345 -1.468414256
+  5   0.1876291 -0.957050620
+  6   0.2899019  0.965676653
+  7   0.2899019 -0.359777893
+  8   0.2899019  0.008403926
+  9   0.2899019  1.726585744
+  10  0.2899019  1.726585744
+  11  0.2899019  1.726585744
+  12 -1.0057870 -1.475694444
+  13 -1.0057870 -1.475694444
+  14 -0.7557870 -1.225694444
+  15 -0.7557870 -1.225694444
+  16 -0.4224537 -0.892361111
+  17  0.5636574  0.899305556
+  18  0.4826389 -0.121527778
+  19  0.5798611  0.267361111
+  20  0.5798611  0.559027778
+  21  0.5798611  0.850694444
+  22  0.5798611  1.822916667
+  23  0.5798611  2.017361111
 > 
 > 
 > 
@@ -3838,7 +3839,7 @@ $terms
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  2.642 0.116 2.759 0 0 
+Time elapsed:  4.664 0.292 4.956 0 0 
 > grDevices::dev.off()
 null device 
           1 
